--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.1",
+    "crypto": "^1.0.1",
     "dotenv": "^14.3.2",
     "express": "^4.17.2",
     "isnullorempty": "^1.0.1",
@@ -16,6 +17,7 @@
     "moment": "^2.29.1",
     "moment-timezone": "^0.5.34",
     "mongoose": "^6.1.8",
-    "mongoose-timestamp": "^0.6.0"
+    "mongoose-timestamp": "^0.6.0",
+    "randomstring": "^1.2.2"
   }
 }
